package Iphone2007.Iphone.FuncoesInternet;

public interface NavegadorInternet {
    public void Internet();
}
