package Iphone2007.Iphone.FuncoesReprodutor;

public interface ReprodutorMusical {
    public void Reproduzir();
}
