package Iphone2007.Iphone.FuncoesTelefonicas;

public interface AparelhoTelefonico {
    public void Telefone();
}
